changement noms .cpp

--- a/Exercise 4/Exercise 4.vcxproj.filters
+++ b/Exercise 4/Exercise 4.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Exercise 4.cpp">
+    <ClCompile Include="Exercice4.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
