--- a/Exercise 5/Exercise 5.vcxproj.filters
+++ b/Exercise 5/Exercise 5.vcxproj.filters
@@ -15,11 +15,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Exercise 5.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
     <Text Include="grille1.txt">
       <Filter>Resource Files</Filter>
     </Text>
@@ -35,5 +30,10 @@
     <Text Include="grille5.txt">
       <Filter>Resource Files</Filter>
     </Text>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Exercice5.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
