--- a/Exercise 1/Exercise 1.vcxproj
+++ b/Exercise 1/Exercise 1.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Exercise1.cpp" />
+    <ClCompile Include="Exercice1.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
