--- a/Exercise 3/Exercise 3.vcxproj
+++ b/Exercise 3/Exercise 3.vcxproj
@@ -140,7 +140,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Exercise 3.cpp" />
+    <ClCompile Include="Exercice3.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
