--- a/Exercise 3/Exercise 3.vcxproj.filters
+++ b/Exercise 3/Exercise 3.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Exercise 3.cpp">
+    <ClCompile Include="Exercice3.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
